@@ -1,3 +1,8 @@
+2015-05-17  Mark Wielaard  <mjw@redhat.com>
+
+	* eblopenbackend.c (MAX_PREFIX_LEN): New define (16).
+	(openbackend): Stack allocate symname array using MAX_PREFIX_LEN.
+
 2015-01-27  Mark Wielaard  <mjw@redhat.com>
 
 	* libebl.h: Add comment from README that this is completely
